before hotlist steady fix
